2013-03-24  Mark H Weaver  <mhw@netris.org>

	* manual/arith.texi (Normalization Functions): Fix prototypes for
	scalbn, scalbnf, scalbnl, scalbln, scalblnf, and scalblnl.

2013-03-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #13889]
	* sysdeps/ieee754/ldbl-128ibm/e_expl.c (__ieee754_expl): Increase the
	high value to check if expl overflow.
	* sysdeps/ieee754/ldbl-128ibm/w_expl.c (__expl): Fix threshold constants
	to check for underflow and overflow.
	* math/libm-test.inc: Add exp test.

2013-03-21  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #11120]
	* sysdeps/x86_64/strcmp.S: Replace all occurrences of NOT_IN_lib
	with NOT_IN_libc.

2013-03-21  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/w_sqrt.c (compat_symbol): Add sqrtl compat
	symbol.

2013-03-21  Thomas Schwinge  <thomas@codesourcery.com>

	* math/gen-libm-test.pl (parse_args, special_functions): Properly
	wrap blocks consisting of several statements.

	* sysdeps/generic/math-tests.h: New file.
	* sysdeps/i386/fpu/math-tests.h: Likewise.
	* math/test-snan.c: Include it.
	(TEST_FUNC): Use SNAN_TESTS to short-circuit certain tests.

2013-03-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15285]
	* sysdeps/ieee754/ldbl-128/e_j0l.c: Include <float.h>.
	(__ieee754_j0l): Do not improve calculations using cos of twice
	input for inputs above LDBL_MAX / 2.0L.
	(__ieee754_y0l): Likewise.
	* sysdeps/ieee754/ldbl-128/e_j1l.c: Include <float.h>.
	(__ieee754_j1l): Do not improve calculations using cos of twice
	input for inputs above LDBL_MAX / 2.0L.
	(__ieee754_y1l): Likewise.
	* math/libm-test.inc (j0_test): Add another test.
	(j1_test): Likewise.
	(y0_test): Likewise.
	(y1_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.

2013-03-21  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Rules ($(objpfx)bench-%.c): Include code from a C source
	file.

2013-03-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15287]