@@ -1,3 +1,10 @@
+2013-03-25  Roland McGrath  <roland@hack.frob.com>
+
+	* include/stdlib.h [!SHARED] (__call_tls_dtors):
+	Declare with __attribute__ ((weak)).
+	* stdlib/exit.c (__libc_atexit) [!SHARED]:
+	Call __call_tls_dtors only if it's not NULL.
+
 2013-03-24  Mark H Weaver  <mhw@netris.org>
 
 	* manual/arith.texi (Normalization Functions): Fix prototypes for
